--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h2 class="title is-2">Abstract</h2>
 
       <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1.2em;">
-        <img src="static\images\overview.png" alt="MY ALT TEXT" style="width: 75%; height: auto;"/>
+        <img src="static\images\brief.png" alt="MY ALT TEXT" style="width: 75%; height: auto;"/>
       </div>
 
       <div class="content has-text-justified">
@@ -252,8 +252,7 @@
 
       <div class="content has-text-justified">
         <p style="font-size: 1.0em;">
-          We select PSNR, SSIM, and LPIPS \cite{zhang2018unreasonable} as evaluation metrics to comprehensively assess the visual quality of the reconstructed avatars. 
-          As shown in Tab.~\ref{tab:recon}, our method consistently outperforms existing state-of-the-art approaches across most datasets and metrics, 
+          As shown in Table 1, our method consistently outperforms existing state-of-the-art approaches across most datasets and metrics, 
           achieving notable improvements in reconstruction quality. In particular, our method attains the highest SSIM scores and the lowest LPIPS values on all four datasets, 
           demonstrating its strong ability to preserve both geometric accuracy and perceptual fidelity.
         </p>
