--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['\\(','\\)']],
+      displayMath: [['$$','$$']]
+    },
+    svg: { fontCache: 'global' }
+  };
+  </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
+  
 <head>
   <meta charset="utf-8">
 
@@ -140,7 +152,7 @@
       <h2 class="title is-2">Abstract</h2>
 
       <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1.2em;">
-        <img src="static\images\brief.png" alt="MY ALT TEXT" style="width: 75%; height: auto;"/>
+        <img src="static\images\brief.png" alt="MY ALT TEXT" style="width: 85%; height: auto;"/>
       </div>
 
       <div class="content has-text-justified">
