--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                  <a href="" 
+                  <a href="https://arxiv.org/abs/2511.19854" 
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fas fa-file-pdf"></i>
